--- a/src/ansible/uni.yml
+++ b/src/ansible/uni.yml
@@ -3,4 +3,7 @@
     devel: true
   roles:
     - ansible-role-Waydroid
+    - ansible-role-Extras-Script
+#    - UniInc.Waydroid
+#    - UniInc.Waydroid-Extras-Script
 
