--- a/src/ansible/uni.yml
+++ b/src/ansible/uni.yml
@@ -1,9 +1,7 @@
-- hosts: node #localhost
+- hosts: localhost #, node
   vars:
     devel: true
   roles:
-    - ansible-role-Waydroid
-    - ansible-role-Waydroid-Extras-Script
-#    - UniInc.Waydroid
-#    - UniInc.Waydroid-Extras-Script
+    - UniInc.Waydroid
+    - UniInc.Waydroid-Extras-Script
 
