--- a/src/ansible/roles/requirements.yml
+++ b/src/ansible/roles/requirements.yml
@@ -2,5 +2,6 @@
 roles:
 - UniInc.Waydroid
 - UniInc.Waydroid-Extras-Script
+- UniInc.Waydroid-Software-Rendering
 - UniInc.Git
 - UniInc.Python-venv
